--- a/help.html
+++ b/help.html
@@ -1,1 +1,2 @@
 <h1>C++ Timer by dawidg81</h1>
+<p>If you see this file, it means that you have successfully installed timer.exe into your computer. In this HTML file you will see basic commands for the timer.</p>
