--- a/help.html
+++ b/help.html
@@ -1,2 +1,6 @@
 <h1>C++ Timer by dawidg81</h1>
 <p>If you see this file, it means that you have successfully installed timer.exe into your computer. In this HTML file you will see basic commands for the timer.</p>
+
+<h2>Setting the timer</h2>
+<p>After you execute the timer.exe file, a console will pop up. You can do "help" to see list of avaiable commands. To set the timer you need to set hours, minutes and seconds first. Do it with "set"
+command. After entering the command you will need to set hours, minutes and seconds of the program. Do not type any letters or the program will crash.</p>
