--- a/help.html
+++ b/help.html
@@ -3,4 +3,5 @@
 
 <h2>Setting the timer</h2>
 <p>After you execute the timer.exe file, a console will pop up. You can do "help" to see list of avaiable commands. To set the timer you need to set hours, minutes and seconds first. Do it with "set"
-command. After entering the command you will need to set hours, minutes and seconds of the program. Do not type any letters or the program will crash.</p>
+command. After entering the command you will need to set hours, minutes and seconds of the program. Do not type any letters or the program will crash. After setting the last increnment which are seconds,
+press enter. The timer has been set. To start the timer from the set hours, minutes and seconds, enter "start" command. The program will now start counting from set hours, minutes and seconds.</p>
